// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypeaheadResult renders self and subcomponents 1`] = `
<typeahead-result
  class={null}
  onClick={[Function]}
>
  Las Vegas
</typeahead-result>
`;

exports[`TypeaheadResult renders self and subcomponents, isHighlighted is true 1`] = `
<typeahead-result
  class="highlighted"
  onClick={[Function]}
>
  Las Vegas
</typeahead-result>
`;
